# modernopengl

./: .gitmodules  CMakeLists.txt  camera.cpp  camera.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
glad/: glad.h
shaders/: light.vert.glsl  transform.frag.glsl  transform.vert.glsl
